# mlx-server

./: README.md  pyproject.toml  requirements.txt
mlx_server/: main.py
mlx_server/app/: main.py
mlx_server/app/api/: errors.py  routes_admin.py  routes_chat.py  routes_health.py  routes_models.py
mlx_server/app/core/: config.py  schemas.py
mlx_server/app/runtime/: mlx_runtime.py  model_registry.py  session_store.py
mlx_server/app/services/: chat_service.py  model_service.py
tests/: test_app.py
