[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-server"
version = "0.1.0"
description = "Python Server app based on mlx-lm and local running LLM models"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "huggingface-hub>=0.22",
]

[project.optional-dependencies]
mlx = [
    "mlx-lm>=0.14",
    "huggingface-hub>=0.22",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
mlx-server = "mlx_server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
